--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -15,11 +15,70 @@
     position: absolute;
   
 }
+.top-nav-1{
+    height: 50px; background-color: #00796b; padding: 10px; 
+}
+.top-nav-1 a{
+    text-decoration: none; padding-right: 30px; color:#fff;
+
+}
+.top-nav-1 a i{
+    padding-right: 5px;font-size: 20px;
+}
+.top-nav-2{
+    height: 50px; background-color: #00796b;text-align: end; padding: 10px;
+
+}
+.top-nav-2 a{
+    text-decoration: none; padding-right: 20px; color:#fff;
+}
+.top-nav-2 a i{
+    font-size: 20px;
+}
+.top-navbar{
+    background-color: #008374;
+}
+.topnavbr a{
+    text-decoration: none; padding: 10px;
+}
+.topnavbr h1{
+    color:#fff; margin-left:100px; font-size: 40px;
+}
+.topnavbr h1 span{
+    color: #f96f59;
+}
+.menu-bar{
+    background: #008374;
+}
+.menu-bar ul{
+    list-style:none; display: flex;justify-content: space-evenly; padding: 30px; box-shadow: 15px;
+}
+.menu-bar ul li a{
+    text-decoration:none;color: #fff;
+}
+.banner-info{
+    background-color:#008374 ;
+}
+.banner-sec-1{
+    height: 500px ;
+}
+.banner-sec-1 p{
+    margin-bottom: 30px; color: rgba(255, 255, 255, 0.6);
+}
+.banner-btn a{
+    text-decoration:none ;
+}
+
+
+
+
+
 .iconbox-flex{
     position: relative;
     bottom: 100px;
 }
 .icon a {
+    text-decoration: none;
     margin-bottom: 20px;
     padding-top: 10px;
     display: inline-block;
@@ -135,19 +194,19 @@ color: white;
 
 }
 
-.pic-icon img {
+.pic-icon{
     position: relative;
 }
 
-.pic-icon a i {
+.play-ico{
     width: 94px;
     height: 94px;
     background: radial-gradient(var(--color-primary) 50%, rgba(0, 131, 116, 0.4) 52%);
     border-radius: 50px;
     position: absolute;
     top: 20px;
-    top: 1538px;
-    left: 1092px;
+    top: 150px;
+    left: 250px;
     font-size: 100px;
 }
 
@@ -196,11 +255,6 @@ color: white;
     padding-right: 50px;
 }
 
-#doubleside {
-    padding-left: 50px;
-    padding-top: 40px;
-    align-items: center;
-}
 
 .call-act .container {
     background: linear-gradient(rgba(2, 2, 2, .5), rgba(0, 0, 0, .8)), url("../imgs/cta-bg.jpg") center center;
@@ -214,21 +268,27 @@ color: white;
 .call-act .container a {
     text-decoration: none;
 }
-
 .play-btn {
-    width: 79px;
-    height: 72px;
+    align-items: center;
+}
+.cal-act{
+    padding-top: 35px;
+    position: relative;
+}
+.play-btn {
+        /* width: 79px; */
+    /* height: 72px; */
     margin-bottom: 20px;
     border-radius: 50%;
     font-size: 30px;
-    display: flex;
-    position: relative;
-    left: 550px;
+    position: absolute;
+    top: -36px;
     padding: 14px;
-    overflow: hidden;
+    left: 562px;
+    /* overflow: hidden; */
     background-color: #008d7d;
     color: wheat;
-    padding-left: 31px;
+    padding-left: 30px
 }
 
 .play-btn i {
@@ -596,6 +656,7 @@ color: white;
 
 .social-item-1 a {
     color: #a2a2a2;
+    text-decoration: none;
     transition: 0.3s;
     border-radius: 50%;
     width: 40px;
@@ -943,6 +1004,7 @@ color: white;
 .foot-ico a{
     color: #a2a2a2;
     transition: 0.3s;
+    text-decoration: none;
     border-radius: 50%;
     width: 40px;
     height: 40px;
